--- a/wwr/style.css
+++ b/wwr/style.css
@@ -1,3 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:ital,wght@1,100&display=swap');
+    .home-title {
+        font-family: Roboto, Helvetica, sans-serif;
+        font-size: 2em;
+        margin-top: 10px;
+    }
+    .book, .join {
+        font-family: Roboto, Helvetica, sans-serif;
+        font-size: 18px;
+        margin-top: 50px;
+    }
+    .msg p {
+        font-family: Roboto, Helvetica, sans-serif;
+        font-size: .8em;
+        padding-bottom: 15px;
+    }
+    .msg {
+        background-color: #283618;
+        line-height: 1.5em;
+        padding: 35px;
+    }
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -6,11 +27,13 @@ nav a {
     text-align: center;
     color:#fefae0;
     text-decoration: none;
+    padding: 35px;
 }
 .book, .join {
     text-align: center;
     color:#fefae0;
     text-decoration: none;
+    border-radius: 5px;
 }
 footer a {
     text-align: center;
@@ -39,6 +62,10 @@ main section {
 }
 body {
     background-color: #606c38;
+    font-family: Roboto, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color: #283618;
@@ -48,6 +75,9 @@ nav a:hover {
 }
 .book, .join {
     background-color: #606c38;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: #606c38;
@@ -60,10 +90,12 @@ nav a:hover {
 }
 footer {
     background-color: #283618;
+    margin-top: 200px;
 }
 nav a {
     background-color: #283618;
     color: #fefae0;
+    padding: 35px;
 }
 nav a:hover {
     background-color: #606c38;
@@ -80,6 +112,9 @@ h4 {
 .book, .join {
     background-color: #283618;
     color:#fefae0;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: #606c38;
@@ -92,6 +127,8 @@ h4 {
 footer {
     background-color: #606c38;
     color:#fefae0;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a {
     background-color: #283618;
@@ -103,10 +140,26 @@ footer a:hoover {
 }
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 .logo {
     width: 80px;
 }
 #hero-image {
     width: 100%;
+}
+#logo_link {
+    padding: 5px;
+}
+footer .social img {
+    padding-top: 15px;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card-img {
+    border: 10px;
+}
+main section img {
+    box-sizing: border-box;
 }
