--- a/wwr/style.css
+++ b/wwr/style.css
@@ -158,7 +158,7 @@ footer .social img {
     margin: 200px 0;
 }
 .card-img {
-    border: 10px;
+    border: 10px solid#fefae0;
 }
 main section img {
     box-sizing: border-box;
