--- a/kicks/styles/site-plan.css
+++ b/kicks/styles/site-plan.css
@@ -170,3 +170,12 @@ nav a:hover {
   border-top: 1px solid;
   border-right: 1px solid;
 }
+.homie-img{
+  width: 50%;
+}
+.gurantee-img{
+  width: 50%;
+}
+.sells-img{
+  width: 50%;
+}
