--- a/kicks/style.css
+++ b/kicks/style.css
@@ -150,7 +150,8 @@ footer a:hoover {
     padding-top: 10px;
 }
 .logo {
-    width: 80px;
+    width: 110px;
+    height: 100%;
 }
 #hero-image {
     width: 100% !important;
