--- a/kicks/style.css
+++ b/kicks/style.css
@@ -141,7 +141,7 @@ footer a {
     background-color: #283618;
     color:#fefae0;
 }
-footer a:hoover {
+footer a:hover {
     background-color: #606c38;
     color:#fefae0;
 }
