--- a/kicks/style.css
+++ b/kicks/style.css
@@ -297,6 +297,20 @@ width: 100%
     grid-row: 2/3;
     text-align: center;
 }
+.back{
+    height: 725px;
+    background-color: #283618;
+    display: none;
+}
+.lol{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #283618;
+    width: 100%;
+}
 form {
     /* Center the form on the page */
     margin: 0 auto;
@@ -404,10 +418,10 @@ form {
         margin: 50px auto;
         width: 60%;
     }
-    #background {
+    #joy {
         display: none;
     }
-    .mountains, .msg {
+    .selling, .msg {
         width: 80%;
         display: block;
         margin: 0 auto;
