--- a/wwr/style.css
+++ b/wwr/style.css
@@ -271,6 +271,20 @@ width: 100%
     grid-row: 2/3;
     text-align: center;
 }
+.back{
+    height: 725px;
+    background-color: #283618;
+    display: none;
+}
+.lol{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #283618;
+    width: 100%;
+}
 /* Dropdown Button */
 .dropbtn {
     background-color: #606c38;
